Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE6d5gXr6y0JyCYoX/g8Tv",
+      "authorship_tag": "ABX9TyOHOJkwnSVO/xbpaYLw6Amg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "3595b5f6-8060-4e05-8fec-fe95f5b17ee0"
+        "outputId": "227d9dcf-6a77-4156-b50f-705a1ad671ae"
       },
       "outputs": [
         {
@@ -48,49 +48,33 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 1.]]\n",
-            "----------------------------\n",
-            "[[1. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 1. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "----------------------------\n",
             "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 1. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 1.]]\n",
-            "----------------------------\n",
-            "[[1. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 1. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
           ]
         }
       ],
       "source": [
         "import numpy as np\n",
+        "import copy\n",
         "\n",
         "class Board:\n",
         "  def __init__(self):\n",
         "    self.__board = np.zeros((8,8))\n",
         "\n",
-        "  def __str__(self):\n",
-        "    return f'{self.__board}'\n",
+        "  @property\n",
+        "  def board(self):\n",
+        "    return self.__board\n",
         "\n",
-        "  def rotate(self):\n",
-        "    self.__board = np.rot90(self.__board, 2)\n",
+        "  @board.setter\n",
+        "  def board(self, board):\n",
+        "    self.__board = board\n",
         "\n",
         "  def set_piece(self, x, y):\n",
         "    self.__board[x][y] = 1\n",
@@ -104,9 +88,6 @@
         "  def __init__(self, x, y):\n",
         "    self.__x = x\n",
         "    self.__y = y\n",
-        "\n",
-        "  def __str__(self):\n",
-        "    return f'x = {self.__x}, y = {self.__y}'\n",
         "\n",
         "  @property\n",
         "  def x(self):\n",
@@ -125,48 +106,100 @@
         "    self.__y = y\n",
         "\n",
         "\n",
-        "king = Piece(0, 0)\n",
-        "\n",
+        "white_king = Piece(1, 1)\n",
+        "black_king = Piece(3, 3)\n",
         "\n",
         "class Game:\n",
         "  def __init__(self):\n",
         "    self.__new_board = Board()\n",
-        "    self.__chess_pieces = [king]\n",
+        "    self.__chess_pieces = [white_king, black_king]\n",
         "\n",
-        "  def __str__(self):\n",
-        "    return str(self.__new_board)\n",
+        "  @property\n",
+        "  def board(self):\n",
+        "    return self.__new_board.board\n",
         "\n",
-        "  def rotate(self):\n",
-        "    self.__new_board.rotate()\n",
+        "  @board.setter\n",
+        "  def board(self, board):\n",
+        "    self.__new_board.board = board\n",
+        "\n",
+        "  def start(self):\n",
+        "    for piece in self.__chess_pieces:\n",
+        "      self.__new_board.set_piece(piece.x, piece.y)\n",
         "\n",
         "  def move(self, item, x_new, y_new):\n",
         "    for piece in self.__chess_pieces:\n",
         "      if piece == item:\n",
-        "        # self.__new_board.delete_piece(piece.x, piece.y)\n",
+        "        self.__new_board.delete_piece(piece.x, piece.y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
         "        piece.y = y_new\n",
         "\n",
         "\n",
-        "# copy matrix\n",
+        "class Player:\n",
+        "  def __init__(self, name, color):\n",
+        "    self.__name = name\n",
+        "    self.__color = color\n",
+        "    self.__game = Game()\n",
+        "\n",
+        "  @property\n",
+        "  def game(self):\n",
+        "    return self.__game\n",
+        "\n",
+        "  @game.setter\n",
+        "  def game(self, game):\n",
+        "    self.__game = game\n",
+        "\n",
+        "  def start(self):\n",
+        "    self.__game.start()\n",
+        "\n",
+        "  def move(self, item, x_new, y_new):\n",
+        "    self.__game.move(item, x_new, y_new)\n",
         "\n",
         "\n",
-        "game = Game()\n",
-        "game.move(king, 0, 0)\n",
-        "game.rotate()\n",
-        "print(game)\n",
-        "print('----------------------------')\n",
-        "game.move(king, 1, 1)\n",
-        "game.rotate()\n",
-        "print(game)\n",
-        "print('----------------------------')\n",
-        "game.move(king, 2, 2)\n",
-        "game.rotate()\n",
-        "print(game)\n",
-        "print('----------------------------')\n",
-        "game.move(king, 3, 3)\n",
-        "game.rotate()\n",
-        "print(game)"
+        "\n",
+        "class Play:\n",
+        "  def __init__(self):\n",
+        "    self.__player1 = Player('alex', 0)\n",
+        "    self.__player2 = Player('ann', 1)\n",
+        "    self.__color = True\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    if self.__color == True:\n",
+        "      return str(self.__player1.game.board)\n",
+        "    else:\n",
+        "      return str(self.__player2.game.board)\n",
+        "\n",
+        "  def start(self):\n",
+        "    self.__player1.start()\n",
+        "    self.__player2.start()\n",
+        "\n",
+        "\n",
+        "  def move_white_player(self, item, x_new, y_new):\n",
+        "    self.__player1.move(item, x_new, y_new)\n",
+        "    self.color = False\n",
+        "\n",
+        "  def move_black_player(self, item, x_new, y_new):\n",
+        "    self.__player2.move(item, x_new, y_new)\n",
+        "    self.__color = True\n",
+        "\n",
+        "  def rotate_board(self):\n",
+        "    if self.__color:\n",
+        "      board = self.__player1.game.board\n",
+        "      self.__player2.game.board = copy.deepcopy(np.rot90(board, 2))\n",
+        "      del(board)\n",
+        "      self.__color = False\n",
+        "    else:\n",
+        "      board = self.__player2.game.board\n",
+        "      self.__player1.game.board = copy.deepcopy(np.rot90(board, 2))\n",
+        "      del(board)\n",
+        "      self.__color = True\n",
+        "\n",
+        "\n",
+        "\n",
+        "p = Play()\n",
+        "print(p)\n",
+        "p.start()\n",
+        "print(p)"
       ]
     }
   ]
