Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHOJkwnSVO/xbpaYLw6Amg",
+      "authorship_tag": "ABX9TyMjMQm5ihm+BCo1iKnUGPc2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,35 +28,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "227d9dcf-6a77-4156-b50f-705a1ad671ae"
+        "outputId": "ae460d30-b95d-449e-f817-a13357c1ed8d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 1. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
+            "---------------------------\n"
           ]
         }
       ],
@@ -78,10 +98,6 @@
         "\n",
         "  def set_piece(self, x, y):\n",
         "    self.__board[x][y] = 1\n",
-        "\n",
-        "  def delete_piece(self, x, y):\n",
-        "    self.__board[x][y] = 0\n",
-        "\n",
         "\n",
         "\n",
         "class Piece:\n",
@@ -106,8 +122,8 @@
         "    self.__y = y\n",
         "\n",
         "\n",
-        "white_king = Piece(1, 1)\n",
-        "black_king = Piece(3, 3)\n",
+        "white_king = Piece(7, 4)\n",
+        "black_king = Piece(0, 4)\n",
         "\n",
         "class Game:\n",
         "  def __init__(self):\n",
@@ -129,7 +145,6 @@
         "  def move(self, item, x_new, y_new):\n",
         "    for piece in self.__chess_pieces:\n",
         "      if piece == item:\n",
-        "        self.__new_board.delete_piece(piece.x, piece.y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
         "        piece.y = y_new\n",
@@ -176,11 +191,9 @@
         "\n",
         "  def move_white_player(self, item, x_new, y_new):\n",
         "    self.__player1.move(item, x_new, y_new)\n",
-        "    self.color = False\n",
         "\n",
         "  def move_black_player(self, item, x_new, y_new):\n",
         "    self.__player2.move(item, x_new, y_new)\n",
-        "    self.__color = True\n",
         "\n",
         "  def rotate_board(self):\n",
         "    if self.__color:\n",
@@ -197,9 +210,18 @@
         "\n",
         "\n",
         "p = Play()\n",
-        "print(p)\n",
         "p.start()\n",
-        "print(p)"
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.move_white_player(white_king, 6, 4)\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.move_black_player(black_king, 6, 3)\n",
+        "print(p)\n",
+        "print('---------------------------')"
       ]
     }
   ]
