Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjMQm5ihm+BCo1iKnUGPc2",
+      "authorship_tag": "ABX9TyOZ3TnXDbGHHH3zCfh0RMeQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,28 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 136,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "ae460d30-b95d-449e-f817-a13357c1ed8d"
+        "outputId": "a14b3814-39a5-41ad-91ff-7135c1295ef0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
-            "---------------------------\n",
+            "e2\n",
             "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
@@ -59,21 +51,33 @@
             " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
             "---------------------------\n",
+            "e7\n",
             "[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
             "---------------------------\n",
+            "e3\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e6\n",
             "[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
             "---------------------------\n"
@@ -189,10 +193,20 @@
         "    self.__player2.start()\n",
         "\n",
         "\n",
-        "  def move_white_player(self, item, x_new, y_new):\n",
+        "  def move_white_player(self, item, x, y):\n",
+        "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
+        "    vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
+        "    y_new = int(horizontal[x])\n",
+        "    x_new = int(vertical[y])\n",
+        "    print(f'{x}{y}')\n",
         "    self.__player1.move(item, x_new, y_new)\n",
         "\n",
-        "  def move_black_player(self, item, x_new, y_new):\n",
+        "  def move_black_player(self, item, x, y):\n",
+        "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
+        "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
+        "    y_new = int(horizontal[x])\n",
+        "    x_new = int(vertical[y])\n",
+        "    print(f'{x}{y}')\n",
         "    self.__player2.move(item, x_new, y_new)\n",
         "\n",
         "  def rotate_board(self):\n",
@@ -211,15 +225,19 @@
         "\n",
         "p = Play()\n",
         "p.start()\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.move_white_player(white_king, 6, 4)\n",
+        "p.move_white_player(white_king, 'e', '2')\n",
         "print(p)\n",
         "print('---------------------------')\n",
         "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'e', '7')\n",
         "print(p)\n",
         "print('---------------------------')\n",
-        "p.move_black_player(black_king, 6, 3)\n",
+        "p.rotate_board()\n",
+        "p.move_white_player(white_king, 'e', '3')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'e', '6')\n",
         "print(p)\n",
         "print('---------------------------')"
       ]
