--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ3TnXDbGHHH3zCfh0RMeQ",
+      "authorship_tag": "ABX9TyOjqopoCHnBDmZf7Nz0z+oF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 166,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "a14b3814-39a5-41ad-91ff-7135c1295ef0"
+        "outputId": "f9bc6ea7-4d5f-4db2-d998-6e5103f480da"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            "---------------------------\n",
             "e2\n",
             "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
@@ -49,10 +58,10 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
             "---------------------------\n",
             "e7\n",
-            "[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
@@ -68,17 +77,57 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
             "---------------------------\n",
             "e6\n",
-            "[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e4\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e5\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "f4\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "f5\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
             "---------------------------\n"
           ]
@@ -103,6 +152,9 @@
         "  def set_piece(self, x, y):\n",
         "    self.__board[x][y] = 1\n",
         "\n",
+        "  def delete_piece(self, x, y):\n",
+        "    self.__board[x][y] = 0\n",
+        "\n",
         "\n",
         "class Piece:\n",
         "  def __init__(self, x, y):\n",
@@ -126,8 +178,8 @@
         "    self.__y = y\n",
         "\n",
         "\n",
-        "white_king = Piece(7, 4)\n",
-        "black_king = Piece(0, 4)\n",
+        "white_king = Piece(7, 4) # e1\n",
+        "black_king = Piece(0, 4) # e8\n",
         "\n",
         "class Game:\n",
         "  def __init__(self):\n",
@@ -149,10 +201,12 @@
         "  def move(self, item, x_new, y_new):\n",
         "    for piece in self.__chess_pieces:\n",
         "      if piece == item:\n",
+        "        old_x = copy.deepcopy(piece.x)\n",
+        "        old_y = copy.deepcopy(piece.y)\n",
+        "        self.__new_board.delete_piece(old_x, old_y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
         "        piece.y = y_new\n",
-        "\n",
         "\n",
         "class Player:\n",
         "  def __init__(self, name, color):\n",
@@ -173,7 +227,6 @@
         "\n",
         "  def move(self, item, x_new, y_new):\n",
         "    self.__game.move(item, x_new, y_new)\n",
-        "\n",
         "\n",
         "\n",
         "class Play:\n",
@@ -213,18 +266,18 @@
         "    if self.__color:\n",
         "      board = self.__player1.game.board\n",
         "      self.__player2.game.board = copy.deepcopy(np.rot90(board, 2))\n",
-        "      del(board)\n",
         "      self.__color = False\n",
         "    else:\n",
         "      board = self.__player2.game.board\n",
         "      self.__player1.game.board = copy.deepcopy(np.rot90(board, 2))\n",
-        "      del(board)\n",
         "      self.__color = True\n",
         "\n",
         "\n",
         "\n",
         "p = Play()\n",
         "p.start()\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
         "p.move_white_player(white_king, 'e', '2')\n",
         "print(p)\n",
         "print('---------------------------')\n",
@@ -238,6 +291,22 @@
         "print('---------------------------')\n",
         "p.rotate_board()\n",
         "p.move_black_player(black_king, 'e', '6')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_white_player(white_king, 'e', '4')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'e', '5')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_white_player(white_king, 'f', '4')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'f', '5')\n",
         "print(p)\n",
         "print('---------------------------')"
       ]
