--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjqopoCHnBDmZf7Nz0z+oF",
+      "authorship_tag": "ABX9TyMMX4HUESn8Y/Flbj4qR9RV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 172,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "f9bc6ea7-4d5f-4db2-d998-6e5103f480da"
+        "outputId": "d6536932-c5c9-43e6-e4b1-f807aa9de07b"
       },
       "outputs": [
         {
@@ -201,9 +201,7 @@
         "  def move(self, item, x_new, y_new):\n",
         "    for piece in self.__chess_pieces:\n",
         "      if piece == item:\n",
-        "        old_x = copy.deepcopy(piece.x)\n",
-        "        old_y = copy.deepcopy(piece.y)\n",
-        "        self.__new_board.delete_piece(old_x, old_y)\n",
+        "        self.__new_board.delete_piece(piece.x, piece.y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
         "        piece.y = y_new\n",
@@ -265,11 +263,11 @@
         "  def rotate_board(self):\n",
         "    if self.__color:\n",
         "      board = self.__player1.game.board\n",
-        "      self.__player2.game.board = copy.deepcopy(np.rot90(board, 2))\n",
+        "      self.__player2.game.board = np.rot90(board, 2)\n",
         "      self.__color = False\n",
         "    else:\n",
         "      board = self.__player2.game.board\n",
-        "      self.__player1.game.board = copy.deepcopy(np.rot90(board, 2))\n",
+        "      self.__player1.game.board = np.rot90(board, 2)\n",
         "      self.__color = True\n",
         "\n",
         "\n",
