start_chess_list

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMX4HUESn8Y/Flbj4qR9RV",
+      "authorship_tag": "ABX9TyNIMBzdHcDK372t2MMWNUzc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 197,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "d6536932-c5c9-43e6-e4b1-f807aa9de07b"
+        "outputId": "09ee678c-ea90-434e-e757-3f07b82cd77e"
       },
       "outputs": [
         {
@@ -49,87 +49,8 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e2\n",
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e7\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e3\n",
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e6\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e4\n",
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e5\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "f4\n",
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "f5\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
-            "---------------------------\n"
+            "7 4\n",
+            "0 4\n"
           ]
         }
       ],
@@ -194,13 +115,20 @@
         "  def board(self, board):\n",
         "    self.__new_board.board = board\n",
         "\n",
+        "  def start_chess_list(self):\n",
+        "    return self.__chess_pieces\n",
+        "\n",
+        "\n",
         "  def start(self):\n",
         "    for piece in self.__chess_pieces:\n",
         "      self.__new_board.set_piece(piece.x, piece.y)\n",
         "\n",
+        "\n",
         "  def move(self, item, x_new, y_new):\n",
+        "    self.__start_black_item = item\n",
         "    for piece in self.__chess_pieces:\n",
         "      if piece == item:\n",
+        "        print(piece.x, piece.y)\n",
         "        self.__new_board.delete_piece(piece.x, piece.y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
@@ -232,6 +160,7 @@
         "    self.__player1 = Player('alex', 0)\n",
         "    self.__player2 = Player('ann', 1)\n",
         "    self.__color = True\n",
+        "    self.__start_black_item = None\n",
         "\n",
         "  def __str__(self):\n",
         "    if self.__color == True:\n",
@@ -243,6 +172,9 @@
         "    self.__player1.start()\n",
         "    self.__player2.start()\n",
         "\n",
+        "  def start_chess_list(self):\n",
+        "    for p in self.__player1.game.start_chess_list():\n",
+        "      print(p.x, p.y)\n",
         "\n",
         "  def move_white_player(self, item, x, y):\n",
         "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
@@ -253,6 +185,7 @@
         "    self.__player1.move(item, x_new, y_new)\n",
         "\n",
         "  def move_black_player(self, item, x, y):\n",
+        "    self.__start_black_item = item\n",
         "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
         "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
         "    y_new = int(horizontal[x])\n",
@@ -275,38 +208,7 @@
         "p = Play()\n",
         "p.start()\n",
         "print(p)\n",
-        "print('---------------------------')\n",
-        "p.move_white_player(white_king, 'e', '2')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'e', '7')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_white_player(white_king, 'e', '3')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'e', '6')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_white_player(white_king, 'e', '4')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'e', '5')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_white_player(white_king, 'f', '4')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'f', '5')\n",
-        "print(p)\n",
-        "print('---------------------------')"
+        "p.start_chess_list()"
       ]
     }
   ]
